# sniffer-squared

./: .gitignore  README.md  compose.yaml
app/: README.md  requirements.txt
app/env/: pyvenv.cfg
app/sniffersquared/: manage.py
app/sniffersquared/sniffersquared/: asgi.py  settings.py  urls.py  wsgi.py
app/sniffersquaredapp/: Dockerfile  db.sqlite3  manage.py
app/sniffersquaredapp/sniffersquaredapp/: asgi.py  settings.py  urls.py  wsgi.py
app/sniffersquaredapp/sniffersquaredui/: apps.py  backend.py  views.py
app/sniffersquaredapp/sniffersquaredui/migrations/: 0001_initial.py  0002_delete_userprofile.py
app/sniffersquaredapp/templates/: about.html  base.html  create_superuser.html  history.html  history_update.html  index.html
arp_spoofer-detec/: README.md  arpspoof_detec.py
combinator/: combinator.py  combinator2.py  mockwhitelists.py  requirements.txt
combinator/socketspython/: LICENSE  README.md  pyproject.toml
combinator/socketspython/pickledsocks/: __init__.py  jsoncks.py  pickledsocks.py  picklesocks.py  serialsocks.py
dns/: README.md  dnsspoofing.py
fingerprinting/: README.md  fingerprint.py  good_ja3_hashes.txt
packet_pool/: README.MD  go.mod  go.sum  id.txt  main.go  packets.pcap  test.pcap
packet_pool/models/: models.go
packet_pool/packet/: packet.go
packet_pool/ws/: client.go
pickledsocks/: pickledsocks.py
tls_fingerprinting/: README.md  tlsfingerprint.py
traffic analysis/: README.md
traffic_analysis/: README.md  analysis.py  my_model.json  service-names-port-numbers.csv  sniffer_square.ipynb  xgboost_model.joblib
(+3 files in other folders)
